--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -500,7 +500,7 @@ header .nav-link:focus,
 
 .timer .progress,
 .timer .progress-stacked {
-    --bs-progress-height: 90px;
+    --bs-progress-height: 61px;
     border-radius: 75px;
     --bs-progress-bg: #87A8F9;
     --bs-progress-bar-bg: #3772FF;
@@ -1230,7 +1230,7 @@ footer {
 
 .foo_inner {
     padding-top: 60px;
-    padding-bottom: 60px;
+    padding-bottom: 24px;
 }
 
 .foo_inner ul li {
